Update the table

--- a/doc/progress/team081progress.tex
+++ b/doc/progress/team081progress.tex
@@ -214,9 +214,9 @@ Our list of innovations is as follows:
       encompassing multiple social activity types (commits and pull requests), not just the Follow-Star-Fork flow.
 \end{itemize}
 
-\colorbox{green!30}{TODO: Detailed description of the design}
+% \colorbox{green!30}{TODO: Detailed description of the design}
 
-\colorbox{green!30}{of upcoming experiments / evaluation}
+% \colorbox{green!30}{of upcoming experiments / evaluation}
 
 % For the final
 % [10%] Intuition — why should it be better than the state of the art?
@@ -231,24 +231,23 @@ Our list of innovations is as follows:
 % each activity’s start and end time (or start time and duration).
 % [-5% if not included] Provide a statement that summarizes the distribution of team members’ effort. The summary statement can be as simple as "all team members have contributed a similar amount of effort". Place this statement immediately after the Gantt chart (or table). If effort distribution is too uneven, we may assign higher scores to members who have contributed more.
 
-Table~\ref{tab:pow} summarizes the plan of work
+Table~\ref{tab:pow} summarizes the plan of work.
+All team members contribute a similar amount of effort
 \begin{table*}
   \caption{Plan of Work in high level}
   \label{tab:pow}
-  \begin{tabular}{cccl}
+  \begin{tabular}{cccccl}
     \toprule
-    Work item               & Who                         & Start   &  Duration\\
+    Work item               & Who               & Planned Start & Planned Duration & Revised Start & Revised Duration \\
     \midrule
-    Proposal document       & Ran               & Oct 8   & 3 days \\
-    Proposal presentation   & Jonathan          & Oct 10  & 2 days \\
-    Proposal video          & Ruzvidzo          & Oct 10  & 2 days \\
-    Data Collection         & Jonathan and All  & Nov 1   & 4 weeks \\
-    Data Augmentation       & Ruzvidzo          & Nov 7   & 3 weeks \\
-    Web and UI              & Ran               & Nov 1   & 4 weeks\\
-    Progress report         & All               & Oct 30  & 1 week \\
-    Final report            & All               & Nov 20  & 2 weeks \\
-    \hline
-    \multicolumn{4}{c} *All team members contribute a similar amount of effort \\
+    Proposal document       & Ran               & Oct 8         & 3 days           & Oct 8                        & 3 days           \\
+    Proposal presentation   & Jonathan          & Oct 10        & 2 days           & Oct 10                       & 2 days           \\
+    Proposal video          & Ruzvidzo          & Oct 10        & 2 days           & Oct 10                       & 2 days           \\
+    Data Collection         & Jonathan and All  & Nov 1         & 4 weeks          & Nov 1                        & 4 weeks          \\
+    Data Augmentation       & Ruzvidzo          & Nov 7         & 3 weeks          & Nov 7                        & 3 weeks          \\
+    Web and UI              & Ran               & Nov 1         & 4 weeks          & \colorbox{yellow!30}{Oct 20} & 4 weeks          \\
+    Progress report         & All               & TBD           & 1 week           & \colorbox{yellow!30}{Oct 29} & 1 week           \\
+    Final report            & All               & TBD           & 2 weeks          & \colorbox{yellow!30}{Nov 24} & \colorbox{yellow!30}{1.5 weeks}        \\
   \bottomrule
 \end{tabular}
 \end{table*}
